--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,29 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.food{
-  width: 105%;
+.top-image-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.food-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   padding-left: 5px;
-  align-self: center;
+}
+
+.top-image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.food{
+  max-width: 100%;
+  max-height: 100%;
   border-radius: 15%;
 }
 
